# pot-bot

./: .dockerignore  .env  .env.template  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
lagrange/: .gitignore  appsettings.json
napcat/config/: .gitignore  webui.json
pot/plugins/: config.py  dessert.py  pot.py  scheduler.py
